# PandasVsPolars

./: main.py  pyproject.toml
